2001-04-28  Dan Mueth  <dan@eazel.com>

	Small updates to a couple docs.

	* help/nautilus-screenshot-guidelines/C/nautilus-screenshot-guideli
	nes.sgml:
	* help/nautilus-user-manual/C/nautilus-user-manual.sgml:

2001-04-27  Andy Hertzfeld  <andy@eazel.com>

	* components/news/nautilus-news.c: (nautilus_news_load_channel),
	(update_remove_button), (add_site_from_fields),
	(remove_selected_site), (make_news_view):
	fixed bug 8192, remove button left enabled when all sites are
	removed, by making the button insensitive when necessary.  Also,
	display the site name instead of the url when loading, since it's
	much more understandable.
	
2001-04-27  Darin Adler  <darin@eazel.com>

	reviewed by: Robin Slomkowski <rslomkow@eazel.com>

	Update FAM support so it works fine on systems with and without
	libfam installed. So if you build Nautilus with FAM, then you can
	run it on a system with or without FAM.

	* configure.in:
	* libnautilus-extensions/Makefile.am:
	Remove the FAM_LIBS part.
	
	* libnautilus-extensions/nautilus-monitor.c: (get_fam_connection):
	Load the module before the FAMOpen2 call, and get all the function
	pointers.
	(get_event_uri), (process_fam_notifications),
	(nautilus_monitor_file), (nautilus_monitor_directory),
	(nautilus_monitor_cancel): Use the new CALL_FAM macro so we can
	use the function pointers when we call FAM.

2001-04-27  Andy Hertzfeld  <andy@eazel.com>

	* components/news/nautilus-news.c: (go_to_uri):
	fixed bug 8186, clicking on a title while it's loading crashes
	the news panel; fixed by checking for NULL.
	
	* components/news/news_channels.xml:
	removed the Dan Gillmor channel since it just moved and I can't
	find where the rss file is on the new site.
	
2001-04-27  John Harper  <jsh@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>

	Fixed bug 7732 (opening window from prompt spawns endless
	process cycle):

	* src/nautilus-application.c (desktop_changed_callback): call
	update_session () directly
