@@ -1,3 +1,10 @@
+2001-04-29  Fatih Demir <kabalak@gtranslator.org>
+
+	* components/help/converters/gnome-info2html2/main.c: Cast argv to
+		(const char **) to avoid a compiling error.
+
+	* src/nautilus-window-menus.c: Include <locale.h>.
+
 2001-04-28  Dan Mueth  <dan@eazel.com>
 
 	Small updates to a couple docs.
